--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "bugs": {
     "url": "https://github.com/shaunmolloy/joi-postcode/issues"
   },
-  "homepage": "https://github.com/shaunmolloy/joi-postcode#readme"
+  "homepage": "https://github.com/shaunmolloy/joi-postcode#readme",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
