Update test scripts in package json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "joi-postcode",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
