--- a/package.json
+++ b/package.json
@@ -16,6 +16,17 @@
   },
   "homepage": "https://github.com/shaunmolloy/joi-postcode#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.13.15",
     "jest": "^26.6.3"
+  },
+  "moduleDirectories": [
+    "node_modules",
+    "src"
+  ],
+  "peerDependencies": {
+    "joi": "^17.4.0"
+  },
+  "dependencies": {
+    "postcode": "^5.1.0"
   }
 }
