--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "dependencies": {
     "@babel/preset-env": "^7.14.1",
     "postcode": "^5.1.0"
-  }
+  },
+  "moduleDirectories": [
+    "src",
+    "node_modules/joi"
+  ]
 }
