--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.14.1",
+    "babel-jest": "^26.6.3",
     "postcode": "^5.1.0"
   },
-  "moduleDirectories": [
-    "src",
-    "node_modules/joi"
-  ]
+  "transform": {
+    "^.+\\.js$": "babel-jest"
+  }
 }
