--- a/package.json
+++ b/package.json
@@ -19,14 +19,8 @@
     "@babel/preset-env": "^7.13.15",
     "jest": "^26.6.3"
   },
-  "moduleDirectories": [
-    "node_modules",
-    "src"
-  ],
-  "peerDependencies": {
-    "joi": "^17.4.0"
-  },
   "dependencies": {
+    "joi": "^17.4.0",
     "postcode": "^5.1.0"
   }
 }
