--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/shaunmolloy/joi-postcode#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.13.15",
+    "babel-jest": "^26.6.3",
     "jest": "^26.6.3"
   },
   "peerDependencies": {
