--- a/package.json
+++ b/package.json
@@ -20,10 +20,8 @@
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3"
   },
-  "peerDependencies": {
-    "joi": "^17.4.0"
-  },
   "dependencies": {
+    "joi": "^17.4.0",
     "postcode": "^5.1.0"
   }
 }
